[gd_scene load_steps=13 format=2]

[ext_resource path="res://effect/unusual/vuvuzela.gd" type="Script" id=1]
[ext_resource path="res://effect/unusual/balloony.png" type="Texture" id=2]
[ext_resource path="res://effect/unusual/balloonb.png" type="Texture" id=3]
[ext_resource path="res://effect/unusual/balloong.png" type="Texture" id=4]
[ext_resource path="res://se/vuvu.wav" type="AudioStream" id=5]
[ext_resource path="res://effect/unusual/balloonr.png" type="Texture" id=6]

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0, 0.904605, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=11]
emission_shape = 1
emission_sphere_radius = 48.0
flag_disable_z = true
gravity = Vector3( 0, -160, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.2
scale_random = 0.25
color_ramp = SubResource( 10 )

[sub_resource type="Gradient" id=12]
offsets = PoolRealArray( 0, 0.848684, 1 )
colors = PoolColorArray( 1.5, 0, 0, 1, 1.5, 0, 0, 1, 1, 0, 0, 0 )

[sub_resource type="GradientTexture" id=13]
gradient = SubResource( 12 )

[sub_resource type="ParticlesMaterial" id=14]
lifetime_randomness = 1.0
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 180.0
gravity = Vector3( 0, 60, 0 )
initial_velocity = 406.24
initial_velocity_random = 0.8
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = -11.56
damping = 100.0
angle = 360.0
angle_random = 1.0
scale = 6.0
scale_random = 1.0
color_ramp = SubResource( 13 )
hue_variation = 1.0
hue_variation_random = 1.0

[node name="vuvuzela" type="Node2D"]
visible = false
script = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -15.0
autoplay = true

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -15.0
pitch_scale = 0.9

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="balloonr" type="Particles2D" parent="."]
lifetime = 2.0
local_coords = false
process_material = SubResource( 11 )
texture = ExtResource( 6 )

[node name="balloonb" type="Particles2D" parent="."]
local_coords = false
process_material = SubResource( 11 )
texture = ExtResource( 3 )

[node name="balloong" type="Particles2D" parent="."]
explosiveness = 0.5
local_coords = false
process_material = SubResource( 11 )
texture = ExtResource( 4 )

[node name="balloony" type="Particles2D" parent="."]
explosiveness = 0.5
local_coords = false
process_material = SubResource( 11 )
texture = ExtResource( 2 )

[node name="confetti" type="Particles2D" parent="."]
position = Vector2( -0.707153, -29.5 )
amount = 1600
lifetime = 2.0
explosiveness = 0.9
local_coords = false
process_material = SubResource( 14 )

[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="finished" from="AudioStreamPlayer2" to="." method="_on_AudioStreamPlayer2_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
